adding visualization and argument parsing for multiple tof capture

--- a/settings_jsons/sr_poe_settings_default.json
+++ b/settings_jsons/sr_poe_settings_default.json
@@ -20,8 +20,8 @@
         "right_raw": false,
         "tof": true,
         "tof_depth": true,
-        "tof_intensity": true,
-        "tof_amplitude": true,
+        "tof_intensity": false,
+        "tof_amplitude": false,
         "rgb": false,
         "rgb_png": false,
         "depth": false,
