multiple capture now compatible with just one capture, code cleaning and testing, stereo output works

--- a/settings_jsons/sr_poe_settings_default.json
+++ b/settings_jsons/sr_poe_settings_default.json
@@ -10,8 +10,8 @@
     "extendedDisparity": true,
     "subpixelDisparity": true,
     "subpixelValue": 5,
-    "highAccuracy": false,
-    "highDensity": false,
+    "profilePreset" : "DEFAULT",
+    "use_filter_settings" : false,
 
     "output_settings": {
         "left": false,
