adding universal capture script - works for both oak d and oak tof

--- a/settings_jsons/sr_poe_settings_default.json
+++ b/settings_jsons/sr_poe_settings_default.json
@@ -18,8 +18,8 @@
         "right": true,
         "left_raw": false,
         "right_raw": false,
-        "tof": true,
-        "tof_depth": true,
+        "tof": false,
+        "tof_depth": false,
         "tof_intensity": false,
         "tof_amplitude": false,
         "rgb": false,
