settings update - no RGB stream and 15 FPS

--- a/settings_jsons/rs_settings.json
+++ b/settings_jsons/rs_settings.json
@@ -8,8 +8,8 @@
     "left": true,
     "right": true,
     "depth": true,
-    "depth_png": true,
-    "rgb": true
+    "depth_png": false,
+    "rgb": false
   },
-  "fps": 5
+  "fps": 15
 }
